<resources>
    <string name="app_name">Class</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="next">next</string>
    <string name="choose_text">Who are you?</string>
    <string name="start">Let\'s start</string>
    <string name="on_boarding_title_1">Teachers &amp; Students</string>
    <string name="on_boarding_title_2">Exams</string>
    <string name="on_boarding_title_3">Tests</string>
    <string name="on_boarding_description_1">A good platform for teachers and students communication and education.</string>
    <string name="on_boarding_description_2">Get ready for your exams and tests.</string>
    <string name="on_boarding_description_3">Ready tests and questions.</string>
    <string name="hi">Hello.</string>
    <string name="sign_in_or_register">Sign in or register to start!</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="wrong_email">Wrong email</string>
    <string name="wrong_name">Name can\'t be empty</string>
    <string name="wrong_password">Password must contain at least 6 characters</string>
    <string name="different_password">Enter the same password</string>
    <string name="registration">Registration</string>
    <string name="wait">Please wait....</string>
    <string name="successful">Registration completed successfully</string>
    <string name="failure">Something went wrong try again.</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="class_name">Class name</string>
    <string name="create_a_new_class">Create a new class</string>
    <string name="subject">Subject</string>
    <string name="join_to_your_class">Join to your class!</string>
    <string name="code">Code</string>
    <string name="ask_code">Ask your teacher for the code.</string>
    <string name="join">Join to the class</string>
    <string name="create_the_class">Create the class</string>
    <string name="fill_all">Fill all fields</string>
    <string name="classes">Classes</string>
    <string name="tests">Tests</string>
    <string name="profile">Profile</string>
    <string name="wrong_code">The code is wrong</string>
    <string name="try_again">Try again!</string>
    <string name="no_classes">You don\'t have any classes yet!</string>
    <string name="join_later">Join later</string>
    <string name="tests_count">tests</string>
    <string-array name="spinner_items">
        <item>Math</item>
        <item>History</item>
        <item>Biology</item>
        <item>Geography</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Foreign languages</item>
        <item>Literature</item>
        <item>Another</item>
    </string-array>
    <string name="questions">Questions</string>
    <string name="categories">Categories</string>
    <string name="finish">Finish</string>
    <string name="results">Results</string>
    <string name="total_correct_answers">Total correct answers</string>
    <string name="go_back">Go back to tests</string>
    <string name="my_profile">My Profile</string>
    <string name="change_image">Change Image</string>
    <string name="save_changes">Save changes</string>
    <string name="forget_password">Forgot password?</string>
    <string name="forget_password1">Forgot password</string>
    <string name="lessons">Lessons</string>
    <string name="homeworks">Homeworks</string>
    <string name="log_out">Log out</string>
    <string name="members">" members"</string>
    <string name="class_code">Class code</string>
    <string name="close">Close</string>
    <string name="add_test">Add test</string>
    <string name="test_name">Test name</string>
    <string name="question_count">Question count</string>
    <string name="question">Question</string>
    <string name="answer_variants">Answer variants</string>
    <string name="variant_1">Variant 1</string>
    <string name="variant_4">Variant 4</string>
    <string name="variant_3">Variant 3</string>
    <string name="variant_2">Variant 2</string>
    <string name="right_answer">Right answer</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="no_lessons">You don\'t have lessons yet!</string>
    <string name="add_a_new_lesson">Add a new lesson</string>
    <string name="add_a_lesson">Add a lesson</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="edit_class">Edit class</string>
    <string name="teacher_delete_class">Are you sure you want to delete this class? This class will be deleted for all class members.</string>
    <string name="student_delete_class">Are you sure you want to leave this class?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="check_your_email">Please click on the link that has been sent to your email to verify your account.</string>
    <string name="verification">Verify your account</string>
    <string name="ok">Ok</string>
    <string name="reset_password_email">Enter your email to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="check_email">Check your email!</string>


</resources>