<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.tests.tests.AddQuestionsFragment">

    <TextView
        android:id="@+id/tv_add_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/reef"
        android:text="@string/add_test"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/reef"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_test"
        app:layout_constraintStart_toStartOf="@id/edt_question"
        tools:text="Question 1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_question"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/question"
        app:boxStrokeColor="@color/text_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_variants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reef"
        android:text="@string/answer_variants"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/edt_question"
        app:layout_constraintStart_toStartOf="@id/edt_question" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="edt_variant1,edt_variant2,edt_variant3,edt_variant4"
        app:flow_verticalGap="-15dp"
        app:layout_constraintEnd_toEndOf="@id/edt_question"
        app:layout_constraintStart_toStartOf="@id/edt_question"
        app:layout_constraintTop_toBottomOf="@+id/tv_variants" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_variant1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/variant_1"
        app:boxStrokeColor="@color/text_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_variant2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/variant_2"
        app:boxStrokeColor="@color/text_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_variant3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/variant_3"
        app:boxStrokeColor="@color/text_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_variant4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/variant_4"
        app:boxStrokeColor="@color/text_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reef"
        android:text="@string/right_answer"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/flow"
        app:layout_constraintStart_toStartOf="@id/edt_question" />

    <RadioGroup
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edt_question"
        app:layout_constraintTop_toBottomOf="@id/tv_right_answer"
        android:orientation="horizontal"
        app:flow_verticalGap="24dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textSize="22sp"
            android:fontFamily="@font/reef"
            android:layout_marginEnd="16dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textSize="22sp"
            android:fontFamily="@font/reef"
            android:layout_marginEnd="16dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="22sp"
            android:fontFamily="@font/reef"
            android:layout_marginEnd="16dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textSize="22sp"
            android:fontFamily="@font/reef"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/reef"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>