<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.profile.EditProfileFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/background6"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/reef"
        android:text="@string/my_profile"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_profile">

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_change_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        android:fontFamily="@font/reef"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:text="@string/change_image"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_person"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_change_icon"
        app:boxStrokeColor="@color/text_color"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="@id/edt_name"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        app:boxStrokeColor="@color/text_color"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_password"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="@id/edt_name"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:boxStrokeColor="@color/text_color"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:textColor="@color/button_text_color"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/save_changes"/>


</androidx.constraintlayout.widget.ConstraintLayout>