<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        android:fontFamily="@font/reef"
        android:padding="16dp"
        android:text="@string/edit_class"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/test_name"
        app:boxStrokeColor="@color/text_color"
        app:hintTextColor="@color/text_color"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/text_color"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/blue_dark"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="18sp" />
</RelativeLayout>
