<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".auth.ForgotPasswordFragment">

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/reef"
        android:text="@string/forget_password1"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forget_password_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reef"
        android:text="@string/reset_password_email"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:layout_marginBottom="6dp"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintBottom_toTopOf="@id/edt_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/text_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"
        app:layout_constraintVertical_bias="0.2"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintVertical_bias="0.15"
        android:textAllCaps="false"
        android:fontFamily="@font/reef"
        android:text="@string/reset"
        android:textSize="18sp"
        android:textColor="@color/button_text_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>