<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.JoinToClassFragment"
    android:background="@drawable/background4">


    <TextView
        android:id="@+id/tv_create_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reef"
        android:text="@string/join_to_your_class"
        android:textColor="@color/primary_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:hint="@string/code"
        app:boxStrokeColor="@color/primary_blue_dark"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:errorEnabled="true"
        app:hintTextColor="@color/primary_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_class"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/primary_blue_dark"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reef"
        android:text="@string/ask_code"
        android:textColor="@color/primary_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/edt_code"
        app:layout_constraintTop_toBottomOf="@id/edt_code" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/join"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_code"
        app:layout_constraintStart_toStartOf="@+id/edt_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_ask" />


</androidx.constraintlayout.widget.ConstraintLayout>